--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,8 @@ migrate_working_dir/
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
-.dart_tool/
+.dart_tool/*
+!.dart_tool/flutter_gen
 .flutter-plugins
 .flutter-plugins-dependencies
 .packages
