--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   google_fonts: ^6.1.0
   http: ^1.1.2
   intl: ^0.18.1
+  mocktail: ^1.0.3
   mqtt_client: ^10.0.0
   package_info_plus: ^5.0.1
   rename_app: ^1.3.1
