--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
+  collection: ^1.18.0
   duration_picker: ^1.1.1
   flutter:
     sdk: flutter
@@ -22,6 +23,8 @@ dependencies:
   google_fonts: ^6.1.0
   http: ^1.1.2
   intl: ^0.18.1
+  mockingjay: ^0.5.0
+  mocktail: ^1.0.3
   mqtt_client: ^10.0.0
   package_info_plus: ^5.0.1
   rename_app: ^1.3.1
@@ -31,6 +34,8 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
@@ -70,3 +75,8 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/images/
     - assets/icons/
+     
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
