--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -4,6 +4,14 @@ jobs:
   drive:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: subosito/flutter-action@v2
-    - run: flutter test
+     - uses: actions/checkout@v4
+     - uses: subosito/flutter-action@v2
+       with:
+        channel: 'stable'
+     - run: flutter test
+
+     - name: Upload coverage reports to Codecov
+       uses: codecov/codecov-action@v4.0.1
+       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        slug: gardenifi/raspirri_app
