--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,7 +1,7 @@
 name: Unit Tests
 on: [push, workflow_dispatch]
 jobs:
-  drive:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -11,7 +11,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-      
+
       - name: Run Unit Tests
         run: flutter test
 
