--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,10 +11,11 @@ repos:
     hooks:
     -   id: black
 
--   repo: https://github.com/dluksza/flutter-analyze-pre-commit
-    rev: "4afcaa82fc368d40d486256bf4edba329bf667bb"
-    hooks:
-    -   id: flutter-analyze
+# If we enable analyzer we need to fix all the issues to pass this step
+# -   repo: https://github.com/dluksza/flutter-analyze-pre-commit
+#     rev: "4afcaa82fc368d40d486256bf4edba329bf667bb"
+#     hooks:
+#     -   id: flutter-analyze
 
 -   repo: https://github.com/Virtomize/flutter-test-pre-commit
     rev: "036a12b8dc14bd40fb59c186b5451b4537cc2d53"
