--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,11 +16,10 @@ jobs:
       GITHUB_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-          ref: main
-          token: ${{ secrets.GH_ACCESS_TOKEN }}
+          ref: ${{ github.ref }}
 
       - name: Install dependencies
         run: |
