Final commit for PR

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,11 +6,11 @@ on:
       - '*' # Listen for all tag pushes
 
 jobs:
-  # pre-commit:
-  #   uses: gardenifi/raspirri_app/.github/workflows/precommit.yml@mariosk/actions
+  pre-commit:
+    uses: gardenifi/raspirri_app/.github/workflows/precommit.yml@main
 
   release:
-    # needs: pre-commit
+    needs: pre-commit
     runs-on: ubuntu-latest
     env:
       GITHUB_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
@@ -55,7 +55,7 @@ jobs:
           # Add, commit, and push the changes
           git add CHANGELOG.md
           git commit -m "Auto-generated changelog"
-          git push origin HEAD:mariosk/action
+          git push
 
       - name: Upload new release to assets
         run: |
