--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -1,7 +1,7 @@
 name: Precommit
-on: [push, workflow_dispatch]
+on: [push, workflow_dispatch, workflow_call]
 jobs:
-  tests:
+  common-job:
     runs-on: ubuntu-latest
     name: Build, Check Code Conventions, Formatting, Linting, run Unit Tests and check UT code coverage on ubuntu-latest
 
