--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -34,5 +34,8 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
           slug: gardenifi/raspirri_app
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
