--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -40,11 +40,9 @@ jobs:
           flutter pub get
           pre-commit run --all-files
 
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3.1.0
         with:
-          fail_ci_if_error: true # optional (default = false)
-          verbose: true # optional (default = false)
-          slug: gardenifi/raspirri_app
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+            token: ${{ secrets.CODECOV_TOKEN }}
+            fail_ci_if_error: true # optional (default = false)
+            verbose: true # optional (default = false)
