--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,8 +40,11 @@ jobs:
           fi
           # Add, commit, and push the changes
           git add CHANGELOG.md
+          echo "1"
           git commit -m "Auto-generated changelog"
+          echo "2"
           git pull --rebase origin main
+          echo "3"
           git push -u origin main
 
       - name: Install flutter
