--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,11 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
-          ref: ${{ github.ref }}
+          fetch-depth: 0
+          ref: main
+          token: ${{ secrets.GH_ACCESS_TOKEN }}
 
       - name: Install dependencies
         run: |
@@ -40,12 +42,8 @@ jobs:
           fi
           # Add, commit, and push the changes
           git add CHANGELOG.md
-          echo "1"
           git commit -m "Auto-generated changelog"
-          echo "2"
-          git pull --rebase origin main
-          echo "3"
-          git push -u origin main
+          git push
 
       - name: Install flutter
         uses: subosito/flutter-action@v2
