--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -17,9 +17,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0
-          ref: main
-          token: ${{ secrets.GH_ACCESS_TOKEN }}
+          ref: ${{ github.ref }}
 
       - name: Install flutter
         uses: subosito/flutter-action@v2
