--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 # Prevent accidental publishing to pub.dev.
 publish_to: 'none'
 
-version: 2.0.0+2
+version: 2.0.2
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
