--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - '!bumpversion.cfg'  # Exclude bumpversion.cfg
+      - '!pubspec.yaml' # Exclude pubspec.yaml
   workflow_dispatch:
   workflow_call:
 
