--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   duration_picker: ^1.1.1
   flutter:
     sdk: flutter
-  flutter_blue_plus: ^1.28.10
+  flutter_blue_plus: 1.30.6
 
   flutter_localizations:
     sdk: flutter
