Fixing precommit for local and actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Precommit
+name: Build
 on:
   push:
     branches:
@@ -38,7 +38,11 @@ jobs:
       - name: Run pre-commit and flutter tests
         run: |
           flutter pub get
-          pre-commit run --all-files
+          pre-commit run --all-files --config .pre-commit-config-actions.yaml
+
+      # - name: Run flutter analyzer
+      #   run: |
+      #     flutter analyze
 
       - name: Run flutter tests with coverage
         run: |
