--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,13 +11,13 @@ repos:
     hooks:
     -   id: black
 
-# -   repo: local
-#     hooks:
-#     -   id: run-analyzer
-#         name: Run flutter analyzer
-#         entry: bash -c 'flutter analyze'
-#         language: system
-#         pass_filenames: false
+-   repo: local
+    hooks:
+    -   id: run-analyzer
+        name: Run flutter analyzer
+        entry: bash -c 'flutter analyze'
+        language: system
+        pass_filenames: false
 
 -   repo: local
     hooks:
